[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0', 'setuptools']

[tool]
[tool.coverage]
[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.report]
exclude_lines = ['raise NotImplementedError', 'pass', 'if TYPE_CHECKING', 'pragma: no cover']
fail_under = 85

[tool.coverage.run]
branch = true
omit = []
source = ['param_sweeps']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
plugins = ['numpy.typing.mypy_plugin']
scripts_are_modules = true
show_column_numbers = true
show_error_context = true
warn_unused_configs = true

[tool.poetry]
authors = ['Mira Geoscience <support@mirageoscience.com>']
classifiers = ['Development Status :: 4 - Beta', 'Intended Audience :: Science/Research', 'Programming Language :: Python', 'Topic :: Scientific/Engineering', 'Topic :: Scientific/Engineering :: Mathematics', 'Topic :: Scientific/Engineering :: Physics', 'Operating System :: Microsoft :: Windows', 'Operating System :: POSIX', 'Operating System :: Unix', 'Natural Language :: English']
description = 'Parameter sweeper for ui.json powered applications'
homepage = 'https://www.mirageoscience.com/mining-industry-software/python-integration/'
keywords = ['geology', 'geophysics', 'earth sciences']
license = 'MIT'
maintainers = ['Benjamin Kary <benjamink@mirageoscience.com>']
name = 'param-sweeps'
readme = 'README.rst'
repository = 'https://github.com/MiraGeoscience/param-sweeps'
version = '0.2.0-alpha.1'

[tool.poetry.dependencies]
numpy = '~1.26.0'
python = '^3.10'

[tool.poetry.dependencies.geoh5py]
allow-prereleases = true
version = '>=0.10.0a0.dev0, <0.11'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
pygments = '*'
pylint = '*'
pytest = '*'
pytest-cov = '*'
tomli = '*'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'COPYING'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'COPYING.LESSER'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'LICENSE'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'README.rst'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'THIRD_PARTY_SOFTWARE.rst'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'docs/**/THIRD_PARTY_SOFTWARE.rst'

[[tool.poetry.source]]
name = 'jfrog-server'
url = 'https://mirageoscienceltd.jfrog.io/artifactory/api/pypi/public-pypi-dev/simple'

[tool.ruff]
target-version = 'py310'

[tool.ruff.lint]
ignore = ['B028', 'E501', 'F401', 'RUF005']
select = ['A', 'B', 'B006', 'B9', 'BLE', 'C4', 'C9', 'E', 'F', 'I', 'RUF', 'TID', 'UP', 'W']

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 18
